# proofreader

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  Vagrantfile  config.env.example  db.sqlite3  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  flake8.ini  init.sql  install_git_hooks.sh  nginx.conf  prepare_db.sql  pyproject.toml  readme.md  setup.cfg  test_deployment.txt  update_server.sh
.github/workflows/: deploy-production.yml  deploy.yml
accounts/: admin.py  apps.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_usersettings_customuser_text_size.py  0003_alter_usersettings_options_and_more.py  0004_alter_customuser_managers.py  0005_pagestatus_historicalpagestatus.py  0006_auto_20231217_1430.py  0007_assignment.py  0008_alter_assignment_options_alter_assignment_pages.py
books/: admin.py  admin_forms.py  api_urls.py  api_views.py  apps.py  managers.py  models.py  tasks.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_book_pdf.py  0002_pagetext_remove_text_book_remove_text_fragment_and_more.py  0003_page_image_alter_page_image_url.py  0003_pagetext_date.py  0004_historicalpage_page_text_delete_pagetext.py  0004_page_image_url.py  0005_historicalpage_created_historicalpage_modified_and_more.py  0006_historicalpage_processed_page_processed.py  0007_historicalpage_text_size_page_text_size.py  0008_remove_historicalpage_processed_and_more.py  0009_alter_page_book_squashed_0013_alter_historicalpage_book_and_more.py  0014_book_total_pages_in_pdf.py  0015_auto_20231120_1529.py  0016_alter_historicalpage_number_and_more.py  0017_alter_author_options_alter_book_options_and_more.py  0018_alter_book_author_alter_book_name.py  0019_auto_20231217_1437.py  0020_alter_page_managers.py  0021_alter_page_managers.py  0022_exportsource_book_export_source.py  0023_book_export_name.py
books/services/: book_export.py  github_upload.py  image_actions.py  pdf_actions.py
books/static/css/: ckeditor5-dark.css  page-admin-modern.css  reader.css
books/static/js/: ckeditor5.js  markdown.js  page-admin-modern.js  resize_textarea.js  zoom_picture_overlay.js
books/templates/admin/: page_change_form.html
core/: admin_filter.py  admin_utils.py  context_processors.py  utils.py
core/base_classes/: admin.py  models.py  serializers.py  views.py
core/lang_switcher/: utils.py
core/static/css/: custom_admin.css
core/templatetags/: custom_history_admin_list.py  i18n_switcher.py  russian_case.py
data/redis/: dump.rdb
locale/eo/LC_MESSAGES/: django.mo  django.po
proofreader/: api_urls.py  asgi.py  manage.py  settings.py  urls.py
proofreader/book/: models.py  urls.py
proofreader/proofreader/: settings.py  urls.py  wsgi.py
taskapp/: celery.py
templates/: base.html  home.html
templates/admin/: base_site.html  change_form.html  change_list.html  foreign_key_filter.html  login.html
templates/book/: activity.html  book_list.html  page.html  page_list.html
templates/history/: _object_history_list.html  object_history.html
templates/registration/: login.html  signup.html
(+1 files in other folders)
