[tool.poetry]
name = "proofreader"
version = "0.1.0"
description = ""
authors = ["Kverde <kverde@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
crispy-bootstrap5 = "^0.6"
django-crispy-forms = "^1.14.0"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
platformdirs = "^2.5.2"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
djlint = "^1.11.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
